--- a/package.json
+++ b/package.json
@@ -4,27 +4,46 @@
   "description": "",
   "main": "src",
   "scripts": {
+    "lint": "eslint --ext .js,.ts,.eslintrc,.json .",
     "test-e2e": "cypress run"
   },
-  "keywords": [
-    "cypress",
-    "plugin",
-    "tab"
-  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "dependencies": {
+    "ally.js": "^1.4.1"
+  },
+  "devDependencies": {
+    "@cypress/eslint-plugin-dev": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^2.3.0",
+    "@typescript-eslint/parser": "^2.3.0",
+    "cypress": "^3.4.1",
+    "eslint": "^6.4.0",
+    "eslint-plugin-cypress": "^2.2.1",
+    "eslint-plugin-json-format": "^2.0.1",
+    "http-server": "^0.11.1",
+    "husky": "^3.0.5",
+    "lint-staged": "^9.2.5",
+    "semantic-release": "^15.13.24",
+    "typescript": "^3.6.3"
+  },
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git://github.com/Bkucera/cypress-plugin-tab.git"
   },
   "author": "Ben Kucera",
-  "license": "MIT",
-  "devDependencies": {
-    "cypress": "^3.1.5",
-    "eslint": "^5.15.0",
-    "eslint-plugin-cypress": "^2.2.1",
-    "eslint-plugin-cypress-dev": "^2.0.0",
-    "http-server": "^0.11.1"
-  },
-  "dependencies": {
-    "ally.js": "^1.4.1"
+  "keywords": [
+    "cypress",
+    "plugin",
+    "tab"
+  ],
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,eslintrc}": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
