--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^6.4.0",
     "eslint-plugin-cypress": "^2.2.1",
     "eslint-plugin-json-format": "^2.0.1",
+    "eslint-plugin-mocha": "^6.1.1",
     "http-server": "^0.11.1",
     "husky": "^3.0.5",
     "lint-staged": "^9.2.5",
