--- a/circle.yml
+++ b/circle.yml
@@ -20,6 +20,8 @@ jobs:
     - run:
         command: yarn test-e2e
     - run:
+        command: yarn add -D cypress@3.4.1 && yarn test-e2e
+    - run:
         command: yarn run semantic-release
 workflows:
   build:
