--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -6,11 +6,11 @@ jobs:
  
   test-e2e:
     
-    runs-on: [ubuntu-latest]
+    runs-on: [ubuntu-16.04]
 
     strategy:
       matrix:
-        cypress-version: ["current", 3.4.1]
+        cypress-version: ["current", 3.8.3, 3.4.1]
 
     steps:
     - uses: actions/checkout@v1
