chore: fix firefox workflow 2

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,6 +18,7 @@ jobs:
       with:
         node-version: '12.x'
     - name: install
+    - uses: cypress/browsers:node12.16.1-chrome80-ff73
       run: |
         yarn install --frozen-lockfile
         [[ ${{ matrix.cypress-version }} =~ 'current' ]] || yarn add -D cypress@${{ matrix.cypress-version }}
