fix firefox workflow try 4

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,7 +21,7 @@ jobs:
     - name: install
       run: |
         yarn install --frozen-lockfile
-        [[ ${{ matrix.cypress-version }} =~ 'current' ]] || yarn add -D cypress@${{ matrix.cypress-version }}
+        if [[ ! ${{ matrix.cypress-version }} =~ 'current' ]]; then; yarn add -D cypress@${{ matrix.cypress-version }};fi
         yarn test-e2e $([[ ${{ matrix.cypress-version }} =~ 'firefox' ]] && echo '--browser firefox')
       env:
         CI: true
