--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,7 +24,7 @@ jobs:
         yarn install --frozen-lockfile
     - name: maybe-install
       run: |
-        if [[ ! ${{ matrix.cypress-version }} =~ current ]]; then yarn add -D cypress@${{ matrix.cypress-version }}; fi
+        bash -c "[[ ! current-firefox =~ current ]] && yarn add -D cypress@current-firefox"
         
     - name: test
       run: |
