replace a11y dep with internal getTabbable

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,29 +1,13 @@
 {
   "eslint.alwaysShowStatus": true,
-  "eslint.autoFixOnSave": true,
   "eslint.validate": [
-    {
-      "language": "javascript",
-      "autoFix": true
-    },
-    {
-      "language": "javascriptreact",
-      "autoFix": true
-    },
-    {
-      "language": "typescript",
-      "autoFix": true
-    },
-    {
-      "language": "typescriptreact",
-      "autoFix": true
-    },
-    {
-      "language": "json",
-      "autoFix": true
-    },
+    "javascript",
+    "javscriptreact",
+    "typescript",
+    "typescriptreact",
+    "json"
   ],
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
-  },
+  }
 }
